Fix - Mobile spacing updated

--- a/themes/btemptd/assets/scss/website/layouts/_question-set.scss
+++ b/themes/btemptd/assets/scss/website/layouts/_question-set.scss
@@ -155,6 +155,6 @@
   .sub-heading {
     @include NeutraText-LightAlt;
     font-size: 24px;
-    letter-spacing: 0.3em;
+    letter-spacing: 0.15em;
   }
 }
